minio/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-ingress
  labels:
    name: minio-ingress
    namespace: minio
  annotations:
    kubernetes.io/ingress.class: haproxy
spec:
  rules:
  - host: minio.k8s.sonins.co.kr
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: minio-console-svc
            port: 
              number: 9001
